--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -77,6 +77,7 @@
                 height: 100%;
                 display: grid;
                 align-items: center;
+                border-bottom: 1px solid #d0d4e4;;
             }
         }
 
@@ -199,7 +200,7 @@
         border: 1px solid #d0d4e4;
         height: 100%;
         border-top: none;
-        border-bottom: none;
+        // border-bottom: none;
     }
 
     .task-title-cell {
