Add Done animations

--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -50,7 +50,6 @@
     }
 }
 
-// Mixin for removing hover efects on iphone screen
 @mixin hover-supported {
     @media not all and (pointer: coarse) {
         &:hover {
@@ -59,41 +58,15 @@
     }
 }
 
-// $font-size-h1: em(100px);
+@mixin animation-style($name) {
+    position: absolute;
+    left: calc((100% - 150px) / 2);
+    right: calc((100% - 150px) / 2);
+    top: 0;
+    bottom: 0;
+    background-size: calc(150px * 75);
+    background-position: left center;
+    animation: $name calc(75s / 25) steps(75);
+    animation-fill-mode: forwards;
+}
 
-// Header font settings
-// @mixin header-font-sizes ($h1-size, $h2-size, $h3-size, $h4-size, $h5-size) {
-//     // font-family: poppins;
-//     margin: 0;
-//     padding: 0;
-//     border: 0;
-//     vertical-align: baseline;
-//     font-size: 100%;
-
-//     @if h1 {
-//         font-size: $h1-size;
-//         line-height: lh(42px);
-//     }
-
-//     @if h2 {
-//         font-size: $h2-size;
-//         // font-family: poppins-medium;
-//         line-height: lh(32px);
-        
-//     }
-
-//     @if h3 {
-//         font-size: $h3-size;
-//         line-height: lh(32px);
-//     }
-
-//     @if h4 {
-//         font-size: $h4-size;
-//         line-height: lh(24px);
-//     }
-
-//     @if h5 {
-//         font-size: $h5-size;
-//         line-height: lh(24px);
-//     }
-// }
