Adjusments for borders not finished

--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -60,9 +60,9 @@
 //     z-index: 11111111;
 // }
 
-.overflow-x {
-    overflow-x: scroll;
-}
+// .overflow-x {
+//     overflow-x: scroll;
+// }
 
 
 // .main-table-tab{
