--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -1,13 +1,13 @@
 .sidebar {
-    grid-row: 1 / span 2; 
+    grid-row: 1 / span 2;
     grid-column: 1;
 }
 
 .board-details {
+    // overflow-y: auto;
     overflow: auto;
-    background-color: $clr6; 
+    background-color: $clr6;
     position: relative;
-
     border-radius: 0.5em 0 0 0;
     min-width: 0;
 }
