Members picker z index fixed

--- a/src/assets/styles/cmps/_avatars.scss
+++ b/src/assets/styles/cmps/_avatars.scss
@@ -71,7 +71,7 @@
     background-color: $bgc-main !important;
     width: 360px;
     position: absolute;
-    z-index: 111;
+    z-index: 11111111;
     left: 41.3em;
     top: 3em;
     display: flex;
