Fix borders in groups

--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -208,7 +208,8 @@
         display: grid;
         justify-items: center;
         align-items: center;
-        border: 1px solid #d0d4e4;
+        border-bottom: 1px solid #d0d4e4;
+        border-right: 1px solid #d0d4e4;
         height: 100%;
         border-top: none;
         // border-bottom: none;
