--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -68,6 +68,7 @@
         align-items: center;
         // border-left: 1px solid $clr-border;
         border-right: 1px solid $clr-border;
+
         &.infinity {
             border: 1px solid #d0d4e4;
             border-left: none;
@@ -162,8 +163,19 @@
         border-bottom-left-radius: 0.3em;
         background-color: white;
         grid-column: 1/-1;
+        border-bottom: 1px solid #d0d4e4;
         // box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        // left: 40px;
+        // left: 50px;
+
+
+    }
+
+    & .add-task-sticky-container {
+        // box-shadow: 0 4px 8px #0003;
+        // margin-right: -10px;
+        // // clip-path: inset(0 -10px 0 0); 
+        // z-index: 2;
+
     }
 
     &.add-task div {
@@ -354,9 +366,12 @@
         border-bottom: none;
         border-left: none;
         border-top: none;
-
-
-
+        background-color: transparent;
+        // box-shadow: 0 4px 8px #0003;
+        // margin-right: -10px;
+        // clip-path: inset(0 -10px 0 0); 
+        z-index: 2;
+        box-shadow: 1px 8px 0 -1px $bgc-main, 0 8px 9px -9px rgba(0,0,0,0.1);
     }
 
     & .stats-clrs-container {
