Improvments design on board home

--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -2,7 +2,7 @@
     position: relative;
     box-sizing: content-box;
 
-    // overflow: auto;
+    // overflow-x: auto;
 
     & ul {
         list-style: none;
