--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -87,6 +87,25 @@
         display: grid;
         justify-items: center;
         border-bottom: 1px solid $clr-border;
+        grid-auto-flow: column;
+        grid-template-columns: 14px 1fr 14px;
+        cursor: pointer;
+        // justify-content: center;
+
+
+        &:hover svg {
+            opacity: 1;
+
+        }
+        // justify-content: space-between;
+        // padding-inline: 4px;
+        svg {
+            height: 14px;
+            justify-self: start;
+            padding-inline-start: 6px;
+            left: 6px;
+            opacity: 0;
+        } 
     }
 
     .status,
