--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -1,71 +1,124 @@
 .board-home {
+    // display: grid;
+    // grid-template-rows: 75px 1fr;
+    background-color: $clr6;
+    position: relative;
+    border-radius: 0.5em 0 0 0;
+    min-width: 0;
     display: grid;
     grid-template-rows: 75px 1fr;
-    row-gap: 5px;
-
-
+    overflow: auto;
 
     .board-home-header {
-        // height: 75px;
+        height: 75px;
         background-color: #fff;
         --box-shadow-color: #e6e9ef;
         box-shadow: 0px 3px 12px #e6e9ef;
         border-radius: 0.5em 0 0 0;
+        box-shadow: rgb(230, 233, 239) 0px 3px 12px 0px;
+        z-index: 1;
 
         .welcome-user-container {
             font-family: Figtree;
             font-weight: 400;
             margin-left: 1em;
-            margin-top: 0.8em;
+            margin-top: 0.5em;
+
         }
 
 
     }
 
-    .board-home-list {
-        height: 100%;
-        width: 100%;
+    .board-home-grid-container {
         background-color: #fff;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        justify-content: center;
-        justify-items: center;
-        padding: 10px;
-        gap: 10px;
+        padding-inline: 20px;
 
-        .board-home-card-container {
+
+
+        .board-home-list-container {
+            border-radius: 0.5em;
+            box-shadow: 0px 3px 12px #e6e9ef;
+            height: 100%;
+            width: 100%;
             display: grid;
-            width: max-content;
-            height: min-content;
-            grid-template-rows: 140px 2em;
-            justify-items: start;
-            justify-content: space-around;
-            border: 1px solid $clr-border;
-            padding: 5px;
-            border-radius: 0.3em;
-            color: rgb(50, 51, 56);
-            cursor: pointer;
-            transition: 0.2s;
+            grid-template-rows: 4em 1fr;
+            margin-top: 16px;
+            padding-inline: 40px;
 
-            &:hover {
-                box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
-                border: 1px solid transparent;
-                text-decoration: none;
-            }
-
-            .quick-search-item-image {
-                max-height: 140px;
-
-            }
-
-            .board-home-card-title {
+            .recently-visited-acord {
                 display: grid;
                 grid-auto-flow: column;
-                align-items: center;
                 width: max-content;
-                column-gap: 0.5em;
-                font-size: 100%;
+                // padding: 20px;
+                // padding-block: 30px;
+                column-gap: 7px;
+                align-items: center;
+
+                svg {
+                    cursor: pointer;
+                }
             }
+
+            h2 {
+                // padding: 20px;
+                // padding-top: 30px;
+                font-size: 18px;
+                color: #323338;
+            }
+
+
+
+            .board-home-list {
+                // padding: 40px;
+
+
+
+                background-color: #fff;
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                justify-content: center;
+                justify-items: center;
+                align-content: start;
+                padding: 10px;
+                gap: 10px;
+
+                .board-home-card-container {
+                    display: grid;
+                    // width: max-content;
+                    height: min-content;
+                    grid-template-rows: 140px 2em;
+                    justify-items: start;
+                    justify-content: space-around;
+                    border: 1px solid $clr-border;
+                    padding: 5px;
+                    border-radius: 0.3em;
+                    color: rgb(50, 51, 56);
+                    cursor: pointer;
+                    transition: 0.2s;
+
+                    &:hover {
+                        box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
+                        border: 1px solid transparent;
+                        text-decoration: none;
+                    }
+
+                    .quick-search-item-image {
+                        max-height: 140px;
+
+                    }
+
+                    .board-home-card-title {
+                        display: grid;
+                        grid-auto-flow: column;
+                        align-items: center;
+                        width: max-content;
+                        column-gap: 0.5em;
+                        font-size: 100%;
+                    }
+                }
+            }
+
         }
+
     }
 }
