Collapse group headers an D&D

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -43,6 +43,7 @@
 @import "cmps/label-picker";
 @import "cmps/timeline-picker-modal";
 @import "cmps/activity";
+@import "cmps/collapsed-group";
 
 
 
