--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -92,6 +92,7 @@
         .editable-title-cell-input {
             display: block; // Ensures the input is block-level for full width
             padding-inline: 5px;
+            font-size: em(14px);
             // padding-block-start: 2px;
             // padding-block-end: 2px;
             height: 24px;
