--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -70,6 +70,7 @@
             border: 1px solid #d0d4e4;
             border-left: none;
             border-top: none;
+            border-right: none;
         }
 
         // width: 100px;
