--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -113,7 +113,7 @@
         // justify-content: space-between;
         // padding-inline: 4px;
         svg {
-            height: 14px;
+            // height: 14px;
             justify-self: start;
             padding-inline-start: 6px;
             left: 6px;
@@ -297,6 +297,7 @@
         justify-items: center;
         border-bottom: 1px solid $clr-border;
         position: relative;
+        // padding: 2px;
         .shadow-txt-cell {
             box-shadow: inset 0 0 0px 1px #4169a3;
             background: #cce5fe;
@@ -313,7 +314,7 @@
             position: absolute;
             cursor: text;
             // pointer-events: fill;
-            width: 100%;
+            // width: 100%;
             justify-content: center;
             padding-bottom: 5px;
             column-gap: 2px;
@@ -332,7 +333,7 @@
         }
      
     & .editable-container-cell {
-        padding-inline: 3px;
+        padding: 5px;
         height: 100%;
         width: 100%;
         
@@ -341,6 +342,7 @@
         text-align: start;
         align-content: center;
         transition: all 0.1s ease-in-out;
+        // justify-content: center;
 
    
         
@@ -375,6 +377,8 @@
             height: 24px;
             width: 100%;
             padding-top: 2px;
+            display: grid;
+            justify-items: center;
             
             cursor: text;
             &:hover {
