Fix plus icon on members cell

--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -115,7 +115,7 @@
         svg {
             // height: 14px;
             justify-self: start;
-            padding-inline-start: 6px;
+            margin-inline-start: 6px;
             left: 6px;
             opacity: 0;
         }
