--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -1,6 +1,6 @@
 .board-header-wrapper {
     grid-row: 1;
-    padding: 20px 30px 0px 32px;
+    // padding: 20px 30px 0px 32px;
     padding-top: 16px;
     position: sticky;
     left: 0;
@@ -8,11 +8,9 @@
     background-color: $bgc-main;
     width: 100%;
     z-index: 99999;
-    transition: all 0.1s ease-in-out;
+    transition: all 0.2s ease-in-out;
 
-    &.collapsed {
-        padding-top: 16px;
-    }
+    
 
     
 
@@ -20,7 +18,15 @@
         grid-row: 1;
         display: grid;
         grid-template-rows: auto auto;
-        row-gap: em(10px);
+        row-gap: em(6px);
+        margin: 20px 30px 0px 32px;
+        transition: 0.2s ea;
+        
+
+        &.collapsed {
+            padding-top: em(24px);
+        }
+
 
         .board-header-top {
             min-width: 0;
@@ -62,6 +68,7 @@
                         &.collapsed {
                             font-size: em(24px);
                             margin-right: em(16px);
+                            letter-spacing: -.5px;
                         }
 
                         &:hover {
@@ -83,7 +90,7 @@
         }
 
         .dyn-search {
-            width: 200px;
+            width: 270px;
             padding-left: 6px;
             transition: .5s;
         }
@@ -111,8 +118,8 @@
                 content: "";
                 display: block;
                 height: 16px;
-                width: 100%;
-                border-right: 1px solid $clr-border;
+                width: 1px;
+                // border-right: 1px solid $clr-border;
                 position: absolute;
             }
         }
@@ -168,6 +175,16 @@
                     }
                 }
             }
+        }
+    }
+
+    & [data-testid="tab"]{
+        border-bottom: 0;
+
+        & a {
+            padding: em(8px);
+            font-family: figtree;
+            font-size: 14px;
         }
     }
 }
