--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -1,6 +1,7 @@
 .home-page {
     background-color: $bgc-main;
     height: 100%;
+    overflow: auto;
 
     & .home-header {
         display: flex;
@@ -112,3 +113,103 @@
     overflow: auto;
     /* Needed to enable resizing */
 }
+
+.welcome-section {
+    display: flex;
+    flex-wrap: wrap;
+    place-content: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #c3c6d4;
+    border-radius: .5em;
+    height: 7.5em;
+    margin: .5em;
+    padding: .5em;
+    padding-block-start: .4375em;
+    text-align: center;
+    width: 8.8571428571rem;
+    height: 8.8571428571rem;
+}
+
+.img-welcome {
+    width: 4em;
+    height: 4em;
+}
+
+.btn-container {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    margin-bottom: 4em;
+    margin-top: 1.5em;
+}
+
+.cta-button {
+    font-family: poppins;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 130px;
+    background-color: rgb(97, 97, 255);
+    border-radius: 2em;
+    padding: 8px 14px 8px 16px;
+    font-size: 13px;
+    margin-bottom: 2em;
+}
+
+.sponsers-section {
+    padding-block: 4.375em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.sponsers-imgs-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+    // margin-top: 3em;
+}
+
+.boost-your-team {
+    justify-content: center;
+    padding: 90px;
+}
+
+.footer-section-full {
+    height: 312px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    color: #fff;
+    background: #181b34;
+    padding: 4.5714285714rem 0;
+    margin-block-start: 7.1428571429rem;
+    font-family: poppins-light;
+}
+
+.p-home {
+
+    font-size: 1.2857142857rem;
+    line-height: 32px;
+    margin-bottom: 20px;
+}
+
+.span{
+    font-size: 1.1428571429rem;
+    font-family: poppins-light;
+    line-height: 40px;
+    // word-break: break-word;
+}
+
