--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -1,9 +1,9 @@
 .group-list {
     display: grid;
     // row-gap: em(28px);
-    width: max-content;
+    // width: max-content;
     // max-width: 1500px;
-    position: relative;
+    // position: relative;
 
 
 
@@ -22,7 +22,7 @@
         height: 2.25em;
         align-items: center;
         text-align: center;
-        border-right: 1px solid $clr-border;
+        // border-right: 1px solid $clr-border;
         // font-size: em(14px);
 
         position: sticky;
@@ -56,6 +56,7 @@
             &.infinity {
                 border: 1px solid $clr-border;
                 border-left: none;
+                border-right: none;
             }
         }
 
@@ -108,35 +109,35 @@
     .group-container {
         background-color: $bgc-main;
         display: grid;
-        position: relative;
-        // grid-template-columns: 40px 453px 150px 150px 150px 200px 100px 100px 100px 100px 1fr;
+        // position: relative;
+        grid-template-columns: 40px 453px 150px 150px 150px 200px 100px 100px 100px 100px 1fr;
 
-        grid-template-columns: 40px 500px 150px 150px 150px 200px 100px 100px 100px 100px 100px auto;
+        // grid-template-columns: 40px 500px 150px 150px 150px 200px 100px 100px 100px 100px 100px auto;
         grid-auto-columns: minmax(100px, 1fr);
         grid-template-rows: 36px;
         width: 100%;
         margin-bottom: em(28px);
         // overflow-x: hidden; 
     
-        &::before,
-        &::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            right: 0;
-            background-color: $clr-border; 
+        // &::before,
+        // &::after {
+        //     content: "";
+        //     position: absolute;
+        //     left: 0;
+        //     right: 0;
+        //     background-color: $clr-border; 
             
-        }
+        // }
     
-        &::before {
-            top: 0; 
-            height: 1px; 
-        }
+        // &::before {
+        //     top: 0; 
+        //     height: 1px; 
+        // }
     
-        &::after {
-            bottom: 0; 
-            height: 1px; 
-        }
+        // &::after {
+        //     bottom: 0; 
+        //     height: 1px; 
+        // }
     
     
         
@@ -193,7 +194,7 @@
     .group-header {
         display: grid;
         grid-column: 1/-1;
-        position: relative;
+        // position: relative;
         grid-auto-flow: column;
         justify-content: start;
         align-items: center;
