--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -410,7 +410,40 @@
 
     .dyn-cell.files {
         border-bottom: 1px solid $clr-border;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+      
 
+        .empty-file-icons-container{
+            display: grid;
+            grid-auto-flow: column;
+            align-items: center;
+        }
+        
+        &:hover .empty-file-icon {
+            opacity: 1;
+        }
+        &:hover svg {
+            opacity: 1;
+        }
+        .empty-file-icon, svg {
+            opacity: 0;
+            transition: 0.3s;
+            pointer-events: fill;
+        }
+
+        svg {
+            margin-inline-start: -7px;
+            position: absolute;
+        }
+
+        label {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+        }
     }
 
 
