--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -420,6 +420,7 @@
             display: grid;
             grid-auto-flow: column;
             align-items: center;
+            pointer-events: fill;
         }
         
         &:hover .empty-file-icon {
