--- a/src/assets/styles/cmps/_activity.scss
+++ b/src/assets/styles/cmps/_activity.scss
@@ -40,13 +40,21 @@
 
         margin-left: 2em;
         margin-top: 1em;
-        margin-bottom: 1em;
+
+        svg {
+            color: #7a7a7a;
+        }
     }
 
     .upper-details-actions {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        .actions-list {
+            display: grid;
+            grid-auto-flow: column;
+            align-items: c;
+        }
     }
 
     .no-updates {
@@ -78,12 +86,22 @@
     .lower-details {
         display: flex;
         flex-direction: column;
+
+
+        & .send-update-wrapper {
+            margin-bottom: 4em;
+            display: grid;
+            grid-auto-flow: column;
+            align-items: center;
+            justify-content: end;
+            color: #7a7a7a;
+            margin-inline-end: 1.3em;
+            margin-top: 5px;
+            font-size: 14px;
+        }
     }
 
-    .send-update-wraper {
-        margin-bottom: 4em;
-        display: flex;
-    }
+
 
     .regular-msg {
         margin-right: 0.5em;
