--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,6 +44,7 @@
 @import "cmps/timeline-picker-modal";
 @import "cmps/activity";
 @import "cmps/collapsed-group";
+@import "cmps/editable-cell";
 
 
 
